# Multimedia-Player

./: .gitignore  AppState.ini
Code/: CMakeLists.txt  main.cpp  resources.qrc
Code/API/: APIFactory.hpp  CMakeLists.txt  RESTful.cpp
Code/Controller/: CMakeLists.txt  Controller.cpp  Controller.hpp
Code/Controller/Authentication/: AuthController.cpp  AuthController.hpp
Code/Controller/Profile/: ProfileController.cpp  ProfileController.hpp
Code/Model/: CMakeLists.txt  Model.cpp  Model.hpp
Code/Model/Authentication/: DatabaseAuthModel.cpp  DatabaseAuthModel.hpp  IAuthModel.cpp  IAuthModel.hpp
Code/Model/User/: UserModel.cpp  UserModel.hpp
Code/Service/: AppState.cpp  AppState.hpp  CMakeLists.txt
Code/Service/API/: APIFactory.cpp  RESTful.cpp  RESTful.hpp
Code/Service/App/: AppState.cpp  AppState.hpp
Code/Service/Authentication/: AuthService.cpp  AuthService.hpp
Code/Service/Data/: UserData.hpp
Code/View/: Main.qml
Code/View/Authentication/: AuthConstants.js  AuthStyles.js  LoginView.qml  RegisterView.qml
Code/View/Components/: CustomButton.qml  CustomComboBox.qml  CustomText.qml  CustomTextField.qml  HoverButton.qml  qmldir
Code/View/Helper/: NavigationManager.qml  RegisterHelper.js
Code/View/Helpers/: NavigationManager.qml
Code/View/Profile/: ProfileStyles.js  ProfileView.qml
Code/ViewModel/: CMakeLists.txt
Design/1.Requirements_Analysis/: 1.Functional_Requirements.md  2.Non_Functional_Requirements.md  3.Use_Case_Diagram.md  4.Use_Case_Specification.md
